--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -192,13 +192,38 @@ a {
   height: auto;
  }
 
- .main-logout{
-  position: absolute;
-  display: inline-block;
-  top: 30%;
-  left: 95%;
-  text-align: right;
+ .main-uerHead{
+	position: relative;
+    display: inline-block;
+    top: 20%;
+    width: 60px;
+    height: 60px;
  }
+ .main-userHead-show{
+	position: relative;
+    display: inline-block;
+    top: 20%;
+    width: 20px;
+    height: 20px;
+ }
+.user-head-background{
+	position: absolute;
+    left: 90%;
+    text-align: right;
+    width: 100px;
+    height: 100%;
+    top: 0%;
+}
+.user-head-background-up{
+    background-color: aliceblue;
+}
+
+ img{
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%; 
+	}
  .main-logout-button{
    background-color: steelblue;
  }
