--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -202,9 +202,34 @@ a {
  .main-userHead-show{
 	position: relative;
     display: inline-block;
-    top: 20%;
     width: 20px;
     height: 20px;
+ }
+ .main-userHead-show-title{
+	width: 100%;
+    position: relative;
+    height: 30%;
+	background-color: azure;
+	z-index: 4;
+ }
+ .main-userHead-show-title-img{
+	position: relative;
+    margin-top: 20%;
+    width: 80%;
+    height: 80%;
+ }
+ .main-userHead-show-title-userName{
+	position: relative;
+    text-align: left;
+    width: 100%;
+    height: 80%;
+    margin-top: 30%;
+    margin-left: -30px;
+ }
+ .main-userHead-show-title-button{
+	width: 100%;
+	height: 30%; 
+	position: relative;
  }
 .user-head-background{
 	position: absolute;
@@ -218,12 +243,20 @@ a {
     background-color: aliceblue;
 }
 
- img{
-	width: auto;
-	height: auto;
-	max-width: 100%;
-	max-height: 100%; 
-	}
+
+.main-user-control{
+	position: absolute;
+    left: 85%;
+    text-align: right;
+    width: 200px;
+    height: 148px;
+    top: 12%;
+	background-color: ivory;
+	display: none;
+	z-index: 1;
+}
+
+
  .main-logout-button{
    background-color: steelblue;
  }
@@ -543,3 +576,6 @@ a {
 .lt-ie9 .button:before {
 	display:none;
 }
+
+
+
